keycloak.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: tests
  labels:
    app: keycloak
spec:
  ports:
    - name: keycloak
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: tests
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: keycloak
          image: keycloak/keycloak:23.0.6-0
          args:
            - start-dev
            - --db=postgres
            - --db-username=postgres
            - --db-password=postgres
            - --db-url-host=postgres.tests.svc.cluster.local
            - --db-url-port=5432
            - --db-url-database=postgres
            - --cache=ispn
            - --cache-config-file=infinispan-cache.xml
            - --hostname=a388895f6c92c48829d5174b2e67789e-f21a17167740f882.elb.eu-west-1.amazonaws.com
            - --hostname-strict=false
            - --proxy=edge
            - --http-enabled=true
            - --health-enabled=true
          ports:
            - name: keycloak
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            failureThreshold: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            failureThreshold: 10
            periodSeconds: 10
          volumeMounts:
            - name: keycloak
              mountPath: /opt/keycloak/providers
            - mountPath: /opt/keycloak/conf/infinispan-cache.xml
              subPath: infinispan-cache.xml
              name: keycloak-cache
              readOnly: true
      volumes:
        - name: keycloak-cache
          configMap:
            name: keycloak-cache
            items:
              - key: infinispan-cache.xml
                path: infinispan-cache.xml
        - name: test-postgres-connection
          configMap:
            name: test-postgres-connection
        - name: test-infinispan-connection
          configMap:
            name: test-infinispan-connection
        - name: keycloak
          persistentVolumeClaim:
            claimName: keycloak
