postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: tests
  labels:
    app: postgres
spec:
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: tests
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: postgres
          image: postgres:16.2
          ports:
          - name: postgres
            containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: postgres
      volumes:
        - name: postgres
          persistentVolumeClaim:
            claimName: postgres
