ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: tests
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: keycloak
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: tests
spec:
  ingressClassName: alb-ingress-controller
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
